--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -3,5 +3,11 @@ NEXT_PUBLIC_ENABLE_WS=false
 NEXT_PUBLIC_WS_ENDPOINT=ws://localhost:8000/ws/chat
 NEXT_PUBLIC_OPENAI_MODEL=gpt-3.5-turbo
 NEXT_PUBLIC_MODEL_OPTIONS=gpt-3.5-turbo,gpt-4o,gpt-4o-mini
-ENABLE_PDF_UPLOAD=true
-ENABLE_TEAM_SHARING=false
+# frontend/.env.local.example
+
+… (other vars)
+
+NEXT_PUBLIC_ENABLE_PDF_UPLOAD=true
+NEXT_PUBLIC_ENABLE_TEAM_SHARING=false
+
+… (other vars)
